Fixes jumping of searchbox icon when starting search

--- a/src/app/ui/components/search-box/search-box.component.scss
+++ b/src/app/ui/components/search-box/search-box.component.scss
@@ -7,6 +7,7 @@
     height: 30px;
     border-radius: 15px;
     padding: 0 8px;
+    border: 1px solid transparent;
 }
 
 .app-search-box-highlight {
